fix: image overflow

--- a/src/styles/pages/home.css
+++ b/src/styles/pages/home.css
@@ -3,9 +3,11 @@
   top: 0;
   left: 0;
   right: 0;
-  width: 100vw;
+  width: 100%;
   height: 500px;
   border-bottom: 1px solid var(--border-color);
+  clip-path: polygon(0 0, 100vw 0, 100vw 100%, 0 100%);
+  overflow: hidden;
 }
 
 .sea-of-quanta {
@@ -14,7 +16,10 @@
   top: 0;
   height: 100%;
   max-width: 1920px;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
+
+.sea-of-quanta img {
+    overflow: hidden;
 }
 
 @media (max-width: 888px) {
@@ -25,7 +30,7 @@
 }
 @media (min-width: 889px) {
   .sea-of-quanta img {
-    width: 100vw;
+    width: 100%;
     height: auto;
   }
 }
@@ -34,7 +39,7 @@
   position: absolute;
   left: 0;
   top: 0;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   background-color: var(--background-color4);
   z-index: 0;
